RESOLVED FIXED36184
YouTube video resizing doesn't work with OOP plug-ins
https://bugs.webkit.org/show_bug.cgi?id=36184
Summary YouTube video resizing doesn't work with OOP plug-ins
Alexey Proskuryakov
Reported 2010-03-16 12:57:09 PDT
Steps to reproduce: 1. Start a youtube video. 2. Click on resize (two-arrow) button to change its size. Results: depending on original size, the video or its bounding view will be scaled incorrectly, with controls misplaced. <rdar://problem/7742659>
Attachments
proposed fix (6.04 KB, patch)
2010-03-16 13:29 PDT, Alexey Proskuryakov
darin: review+
oops, forgot about WebKitTools (5.62 KB, patch)
2010-03-16 14:03 PDT, Alexey Proskuryakov
darin: review+
Alexey Proskuryakov
Comment 1 2010-03-16 13:29:16 PDT
Created attachment 50828 [details] proposed fix I've tried using DOM events to make the test work automatically in browser without success.
Darin Adler
Comment 2 2010-03-16 13:37:19 PDT
Comment on attachment 50828 [details] proposed fix Does this hurt performance? r=me
Alexey Proskuryakov
Comment 3 2010-03-16 13:42:12 PDT
Committed <http://trac.webkit.org/changeset/56079> > Does this hurt performance? The test I performed was putting six YouTube videos on a page and scrolling. This didn't seem to have been affected.
Alexey Proskuryakov
Comment 4 2010-03-16 14:03:35 PDT
Created attachment 50836 [details] oops, forgot about WebKitTools
Alexey Proskuryakov
Comment 5 2010-03-16 14:27:02 PDT
Committed WebKitTools changes in <http://trac.webkit.org/changeset/56086>.
Note You need to log in before you can comment on or make changes to this bug.