WebKitTools/DumpRenderTree/TestNetscapePlugIn.subproj/PluginObject.h
@@ -52,6 +52,7 @@ typedef struct {
 #ifdef XP_MACOSX
     NPEventModel eventModel;
 #endif
+    NPWindow lastWindow;
 } PluginObject;
 
 extern NPClass *getPluginClass(void);
