WebKitTools/DumpRenderTree/TestNetscapePlugIn.subproj/main.cpp
@@ -174,6 +174,8 @@ NPError NPP_SetWindow(NPP instance, NPWindow *window)
     PluginObject* obj = static_cast<PluginObject*>(instance->pdata);
 
     if (obj) {
+        obj->lastWindow = *window;
+
         if (obj->logSetWindow) {
             pluginLog(instance, "NPP_SetWindow: %d %d", (int)window->width, (int)window->height);
             obj->logSetWindow = false;
